--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -176,6 +176,9 @@
 	<ItemGroup>
 		<PackageVersion Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Yitter.IdGenerator" Version="1.0.14" />
+	</ItemGroup>
 	<!-- Quartz JobSchedule -->
 	<ItemGroup>
 		<PackageVersion Include="Quartz.AspNetCore" Version="3.7.0" />
