--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -706,6 +706,10 @@
 	<ItemGroup>
 		<PackageVersion Include="Essensoft.Paylink.WeChatPay" Version="4.1.2" />
 	</ItemGroup>
+	<!-- Wechat Api SDK -->
+	<ItemGroup>
+		<PackageVersion Include="SKIT.FlurlHttpClient.Wechat.Api" Version="2.36.0" />
+	</ItemGroup>
 	<!-- Excel -->
 	<ItemGroup>
 		<PackageVersion Include="NPOI" Version="2.6.2" />
