--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -94,7 +94,7 @@
 	</PropertyGroup>
 	<!-- BD Common -->
 	<ItemGroup>
-		<PackageVersion Include="BD.Common.Mvvm" Version="$(Version_BDCommon)" />
+		<PackageVersion Include="BD.Common.Mvvm" Version="1.24.10221.11803" />
 		<PackageVersion Include="BD.Common.Mvvm.ReactiveUI" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.Navigation" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.Security" Version="$(Version_BDCommon)" />
@@ -123,7 +123,7 @@
 		<PackageVersion Include="BD.Common.AspNetCore.Identity" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.AspNetCore.Identity.BackManage" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.AspNetCore.Blazor.BackManage" Version="$(Version_BDCommon)" />
-		<PackageVersion Include="BD.Common" Version="$(Version_BDCommon)" />
+		<PackageVersion Include="BD.Common" Version="1.24.10221.11803" />
 		<PackageVersion Include="BD.Common.Area" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.BirthDate" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.EFCore" Version="$(Version_BDCommon)" />
