--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -468,6 +468,9 @@
 		<PackageVersion Include="InitQ " Version="1.0.0.18" />
 	</ItemGroup>
 	<ItemGroup>
+		<PackageVersion Include="MailKit" Version="4.5.0" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageVersion Include="Microsoft.Extensions.Primitives" Version="7.0.0" />
 	</ItemGroup>
 	<ItemGroup>
