--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,7 +22,7 @@
     </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
-        <Version_Avalonia>11.0.9</Version_Avalonia>
+        <Version_Avalonia>11.1.0-beta2</Version_Avalonia>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_Xaml_Behaviors>11.1.0-beta2.1</Version_Avalonia_Xaml_Behaviors>
