--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,10 +22,10 @@
     </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
-        <Version_Avalonia>11.1.0-beta2</Version_Avalonia>
+        <Version_Avalonia>11.1.0-rc1</Version_Avalonia>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Xaml_Behaviors>11.1.0-beta2.1</Version_Avalonia_Xaml_Behaviors>
+        <Version_Avalonia_Xaml_Behaviors>11.1.0-rc1</Version_Avalonia_Xaml_Behaviors>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_Edit>11.0.6</Version_Avalonia_Edit>
@@ -43,7 +43,7 @@
         <Version_Avalonia_LibVLCSharp>3.7.0</Version_Avalonia_LibVLCSharp>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_FluentUI>2.1.0-preview5</Version_Avalonia_FluentUI>
+        <Version_Avalonia_FluentUI>2.1.0-preview6</Version_Avalonia_FluentUI>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-rc2</Version_Avalonia_LiveChartsCore_SkiaSharpView>
