--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,7 +2,7 @@
     <!-- NuGet 错误 NU1011 PackageVersion 项不能包含浮动版本。 -->
     <!-- BD Common -->
     <PropertyGroup>
-        <Version_BDCommon>1.23.11113.11410</Version_BDCommon>
+        <Version_BDCommon>1.24.10816.11654</Version_BDCommon>
     </PropertyGroup>
     <PropertyGroup>
         <Version_BDSteamClient>1.23.10626.11400</Version_BDSteamClient>
@@ -129,7 +129,7 @@
 		<PackageVersion Include="BD.Common.AspNetCore.Identity" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.AspNetCore.Identity.BackManage" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.AspNetCore.Blazor.BackManage" Version="$(Version_BDCommon)" />
-		<PackageVersion Include="BD.Common" Version="1.24.10801.12003" />
+		<PackageVersion Include="BD.Common" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.Area" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.BirthDate" Version="$(Version_BDCommon)" />
 		<PackageVersion Include="BD.Common.EFCore" Version="$(Version_BDCommon)" />
