--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,28 +22,28 @@
     </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
-        <Version_Avalonia>11.1.0-rc2</Version_Avalonia>
+        <Version_Avalonia>11.2.0-beta1</Version_Avalonia>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Xaml_Behaviors>11.1.0-rc2</Version_Avalonia_Xaml_Behaviors>
+        <Version_Avalonia_Xaml_Behaviors>11.1.0</Version_Avalonia_Xaml_Behaviors>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Edit>11.0.6</Version_Avalonia_Edit>
+        <Version_Avalonia_Edit>11.1.0</Version_Avalonia_Edit>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_AvaloniaEdit_TextMate>11.0.6</Version_AvaloniaEdit_TextMate>
+        <Version_AvaloniaEdit_TextMate>11.1.0</Version_AvaloniaEdit_TextMate>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_Markdown>11.0.2</Version_Avalonia_Markdown>
+        <Version_Avalonia_Markdown>11.0.3-a1</Version_Avalonia_Markdown>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_LibVLCSharp>3.7.0</Version_Avalonia_LibVLCSharp>
+        <Version_Avalonia_LibVLCSharp>3.9.0</Version_Avalonia_LibVLCSharp>
     </PropertyGroup>
     <PropertyGroup>
-        <Version_Avalonia_FluentUI>2.1.0-preview6</Version_Avalonia_FluentUI>
+        <Version_Avalonia_FluentUI>2.1.0</Version_Avalonia_FluentUI>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-rc2</Version_Avalonia_LiveChartsCore_SkiaSharpView>
@@ -51,12 +51,12 @@
 	<!-- HarfBuzzSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
-		<Version_HarfBuzzSharp>7.3.0.2</Version_HarfBuzzSharp>
+		<Version_HarfBuzzSharp>8.3.0-preview.4.1</Version_HarfBuzzSharp>
 	</PropertyGroup>
 	<!-- SkiaSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
-		<Version_SkiaSharp>2.88.8</Version_SkiaSharp>
+		<Version_SkiaSharp>3.0.0-preview.4.1</Version_SkiaSharp>
 	</PropertyGroup>
 	<!-- CommandLine -->
 	<PropertyGroup>
@@ -781,7 +781,7 @@
 		<PackageVersion Include="Avalonia.ReactiveUI" Version="$(Version_Avalonia)" />
 		<!--<PackageVersion Include="Avalonia.Direct2D1" Version="$(Version_Avalonia)" />-->
 		<PackageVersion Include="Avalonia.Controls.DataGrid" Version="$(Version_Avalonia)" />
-        <PackageVersion Include="Avalonia.Controls.ItemsRepeater" Version="$(Version_Avalonia)" />
+        <PackageVersion Include="Avalonia.Controls.ItemsRepeater" Version="11.1.3" />
 		<PackageVersion Include="Avalonia.Native" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Win32" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.X11" Version="$(Version_Avalonia)" />
