--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1060,4 +1060,7 @@
 	<ItemGroup>
 		<PackageVersion Include="LiteDB" Version="5.0.17" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Utf8StringInterpolation" Version="1.3.1" />
+	</ItemGroup>
 </Project>
