--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -22,7 +22,7 @@
     </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
-        <Version_Avalonia>11.2.0-beta1</Version_Avalonia>
+        <Version_Avalonia>11.1.3</Version_Avalonia>
     </PropertyGroup>
     <PropertyGroup>
         <Version_Avalonia_Xaml_Behaviors>11.1.0</Version_Avalonia_Xaml_Behaviors>
@@ -51,12 +51,12 @@
 	<!-- HarfBuzzSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
-		<Version_HarfBuzzSharp>8.3.0-preview.4.1</Version_HarfBuzzSharp>
+		<Version_HarfBuzzSharp>7.3.0.2</Version_HarfBuzzSharp>
 	</PropertyGroup>
 	<!-- SkiaSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
-		<Version_SkiaSharp>3.0.0-preview.4.1</Version_SkiaSharp>
+		<Version_SkiaSharp>2.88.8</Version_SkiaSharp>
 	</PropertyGroup>
 	<!-- CommandLine -->
 	<PropertyGroup>
@@ -781,7 +781,7 @@
 		<PackageVersion Include="Avalonia.ReactiveUI" Version="$(Version_Avalonia)" />
 		<!--<PackageVersion Include="Avalonia.Direct2D1" Version="$(Version_Avalonia)" />-->
 		<PackageVersion Include="Avalonia.Controls.DataGrid" Version="$(Version_Avalonia)" />
-        <PackageVersion Include="Avalonia.Controls.ItemsRepeater" Version="11.1.3" />
+        <PackageVersion Include="Avalonia.Controls.ItemsRepeater" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Native" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Win32" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.X11" Version="$(Version_Avalonia)" />
