--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1063,4 +1063,8 @@
 	<ItemGroup>
 		<PackageVersion Include="Utf8StringInterpolation" Version="1.3.1" />
 	</ItemGroup>
+  <!-- BsDiff -->
+  <ItemGroup>
+      <PackageVersion Include="BsDiff" Version="1.1.0" />
+  </ItemGroup>
 </Project>
