--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -480,6 +480,9 @@
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.Extensions.FileProviders.Physical" Version="7.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Extensions.Configuration.UserSecrets" Version="7.0.0" />
+	</ItemGroup>
 	<!-- AspNetCore 7.0 -->
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.20" />
