--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -394,6 +394,12 @@
 	<ItemGroup>
 		<PackageVersion Include="AspNet.Security.OAuth.Apple" Version="8.2.0" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="BuknSS.AspNet.Security.OAuth.Alipay" Version="8.2.2-dev" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="AspNet.Security.OAuth.Weixin" Version="7.0.4" />
+	</ItemGroup>
 	<!-- OpenIddict 库提供 OAuth2 和 OpenId 服务授权 -->
 	<ItemGroup>
 		<PackageVersion Include="OpenIddict.Core" Version="5.8.0" />
