➕ Microsoft.Windows.CsWin32

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1087,4 +1087,7 @@
 	<ItemGroup>
 		<PackageVersion Include="CryptSharpStandard" Version="1.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.162"/>
+	</ItemGroup>
 </Project>
