--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,10 +16,6 @@
 	<PropertyGroup>
 		<Version_BDCommon8_HuaweiCloud_SDK_OBS>8.24.10411.11524</Version_BDCommon8_HuaweiCloud_SDK_OBS>
 	</PropertyGroup>
-    <!-- RxUI -->
-    <PropertyGroup>
-        <Version_ReactiveUI>19.4.1</Version_ReactiveUI>
-    </PropertyGroup>
     <!-- Avalonia-->
     <PropertyGroup>
         <Version_Avalonia>11.2.5</Version_Avalonia>
@@ -51,16 +47,16 @@
 	<!-- HarfBuzzSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
-		<Version_HarfBuzzSharp>8.3.1-preview.2.3</Version_HarfBuzzSharp>
+		<Version_HarfBuzzSharp>8.3.1.2</Version_HarfBuzzSharp>
 	</PropertyGroup>
 	<!-- SkiaSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/SkiaSharp.props -->
-		<Version_SkiaSharp>3.118.0-preview.2.3</Version_SkiaSharp>
+		<Version_SkiaSharp>3.119.1</Version_SkiaSharp>
 	</PropertyGroup>
 	<!-- CommandLine -->
 	<PropertyGroup>
-		<Version_CommandLine>2.0.0-beta4.22272.1</Version_CommandLine>
+		<Version_CommandLine>2.0.2</Version_CommandLine>
 	</PropertyGroup>
 	<!-- AppCenter -->
 	<PropertyGroup>
@@ -85,17 +81,17 @@
 	</PropertyGroup>
 	<!-- Vanara.PInvoke -->
 	<PropertyGroup>
-		<Version_Vanara_PInvoke>3.4.16</Version_Vanara_PInvoke>
+		<Version_Vanara_PInvoke>5.0.0</Version_Vanara_PInvoke>
 	</PropertyGroup>
 	<PropertyGroup>
 		<Version_Splat_Drawing>14.7.1</Version_Splat_Drawing>
 	</PropertyGroup>
 	<PropertyGroup>
-		<Version_System_Drawing_Common>9.0.0</Version_System_Drawing_Common>
+		<Version_System_Drawing_Common>10.0.2</Version_System_Drawing_Common>
 	</PropertyGroup>
 	<!-- Reactive -->
 	<PropertyGroup>
-		<Version_System_Reactive>6.0.0</Version_System_Reactive>
+		<Version_System_Reactive>6.1.0</Version_System_Reactive>
 	</PropertyGroup>
 	<!-- Humanizer -->
 	<PropertyGroup>
@@ -357,19 +353,19 @@
 	</ItemGroup>
 	<!-- ReactiveUI -->
 	<ItemGroup>
-		<PackageVersion Include="ReactiveUI" Version="$(Version_ReactiveUI)" />
+		<PackageVersion Include="ReactiveUI" Version="22.3.1" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="ReactiveUI.Fody" Version="$(Version_ReactiveUI)" />
+		<PackageVersion Include="ReactiveUI.Fody" Version="19.5.41" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="ReactiveUI.XamForms" Version="$(Version_ReactiveUI)" />
+		<PackageVersion Include="ReactiveUI.XamForms" Version="19.6.12" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="ReactiveUI.AndroidX" Version="$(Version_ReactiveUI)" />
+		<PackageVersion Include="ReactiveUI.AndroidX" Version="22.3.1" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="ReactiveUI.Maui" Version="$(Version_ReactiveUI)" />
+		<PackageVersion Include="ReactiveUI.Maui" Version="22.3.1" />
 	</ItemGroup>
 	<!-- Pinyin(TinyPinyin.Net) -->
 	<ItemGroup>
@@ -478,7 +474,7 @@
 		<PackageVersion Include="StackExchange.Redis.Extensions.AspNetCore" Version="11.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="InitQ " Version="1.0.0.18" />
+		<PackageVersion Include="InitQ" Version="1.0.0.18" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageVersion Include="MailKit" Version="4.14.1" />
@@ -785,6 +781,9 @@
 	<ItemGroup>
 		<PackageVersion Include="DNS" Version="7.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Stun.Net" Version="9.0.1" />
+	</ItemGroup>
 	<!-- Cryptographic Algorithms & Protocols -->
 	<ItemGroup>
 		<PackageVersion Include="Portable.BouncyCastle" Version="1.9.0" />
@@ -899,7 +898,7 @@
 		<PackageVersion Include="Xamarin.AndroidX.RecyclerView" Version="1.3.1.1" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="Xamarin.Google.Android.Material" Version="1.9.0.3" />
+		<PackageVersion Include="Xamarin.Google.Android.Material" Version="1.10.0.2" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageVersion Include="Xamarin.AndroidX.SwipeRefreshLayout" Version="1.1.0.15" />
@@ -1025,7 +1024,7 @@
 	</ItemGroup>
 	<!-- IPC -->
 	<ItemGroup>
-		<PackageVersion Include="dotnetCampus.Ipc" Version="2.0.0-alpha406" />
+		<PackageVersion Include="dotnetCampus.Ipc" Version="2.0.0-alpha434" />
 	</ItemGroup>
 	<!-- ValveKeyValue -->
 	<ItemGroup>
@@ -1052,7 +1051,7 @@
 	</ItemGroup>
 	<!-- Splat.Drawing: Cross platform drawing -->
 	<ItemGroup>
-		<PackageVersion Include="Splat.Drawing" Version="$(Version_Splat_Drawing)" />
+		<PackageVersion Include="Splat.Drawing" Version="19.2.1" />
 	</ItemGroup>
 	<!-- Microsoft.CodeAnalysis -->
 	<ItemGroup>
