--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,49 +1,49 @@
 <Project>
-    <!-- NuGet 错误 NU1011 PackageVersion 项不能包含浮动版本。 -->
-    <!-- BD Common -->
-    <PropertyGroup>
-        <Version_BDCommon>1.25.10122.11624</Version_BDCommon>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_BDSteamClient>1.23.10626.11400</Version_BDSteamClient>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_BDSteamClientModels>1.23.10616.11526</Version_BDSteamClientModels>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_BDWTTSSDK>1.23.10616.11526</Version_BDWTTSSDK>
-    </PropertyGroup>
+	<!-- NuGet 错误 NU1011 PackageVersion 项不能包含浮动版本。 -->
+	<!-- BD Common -->
+	<PropertyGroup>
+		<Version_BDCommon>1.25.10122.11624</Version_BDCommon>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_BDSteamClient>1.23.10626.11400</Version_BDSteamClient>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_BDSteamClientModels>1.23.10616.11526</Version_BDSteamClientModels>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_BDWTTSSDK>1.23.10616.11526</Version_BDWTTSSDK>
+	</PropertyGroup>
 	<PropertyGroup>
 		<Version_BDCommon8_HuaweiCloud_SDK_OBS>8.24.10411.11524</Version_BDCommon8_HuaweiCloud_SDK_OBS>
 	</PropertyGroup>
-    <!-- Avalonia-->
-    <PropertyGroup>
-        <Version_Avalonia>11.2.5</Version_Avalonia>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_Xaml_Behaviors>11.2.0.9</Version_Avalonia_Xaml_Behaviors>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_Edit>11.1.0</Version_Avalonia_Edit>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_AvaloniaEdit_TextMate>11.1.0</Version_AvaloniaEdit_TextMate>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_Markdown>11.0.3-a1</Version_Avalonia_Markdown>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_LibVLCSharp>3.9.0</Version_Avalonia_LibVLCSharp>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_FluentUI>2.3.0</Version_Avalonia_FluentUI>
-    </PropertyGroup>
-    <PropertyGroup>
-        <Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-rc5.4</Version_Avalonia_LiveChartsCore_SkiaSharpView>
-    </PropertyGroup>
+	<!-- Avalonia-->
+	<PropertyGroup>
+		<Version_Avalonia>11.3.11</Version_Avalonia>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_Xaml_Behaviors>11.2.0.9</Version_Avalonia_Xaml_Behaviors>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_Edit>11.3.0</Version_Avalonia_Edit>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_AvaloniaEdit_TextMate>11.3.0</Version_AvaloniaEdit_TextMate>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_Markdown>11.0.3-a1</Version_Avalonia_Markdown>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_CefNet>105.3.22248.142</Version_Avalonia_CefNet>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_LibVLCSharp>3.9.0</Version_Avalonia_LibVLCSharp>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_FluentUI>2.5.0</Version_Avalonia_FluentUI>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Version_Avalonia_LiveChartsCore_SkiaSharpView>2.0.0-rc6.1</Version_Avalonia_LiveChartsCore_SkiaSharpView>
+	</PropertyGroup>
 	<!-- HarfBuzzSharp -->
 	<PropertyGroup>
 		<!-- https://github.com/AvaloniaUI/Avalonia/blob/master/build/HarfBuzzSharp.props -->
@@ -682,7 +682,7 @@
 	<!-- BD.Any.AppCenter -->
 	<ItemGroup>
 		<PackageVersion Include="BD.Any.AppCenter" Version="$(Version_Any_AppCenter_BD)" />
-		<PackageVersion Include="BD.Any.AppCenter.Analytics" Version="$(Version_Any_AppCenter_BD)" /> 
+		<PackageVersion Include="BD.Any.AppCenter.Analytics" Version="$(Version_Any_AppCenter_BD)" />
 	</ItemGroup>
 	<!-- Moq -->
 	<ItemGroup>
@@ -794,10 +794,11 @@
 		<PackageVersion Include="Avalonia.Desktop" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Skia" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Diagnostics" Version="$(Version_Avalonia)" />
-		<PackageVersion Include="Avalonia.ReactiveUI" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.ReactiveUI" Version="11.3.8" />
+		<PackageVersion Include="ReactiveUI.Avalonia" Version="11.3.8" />
 		<!--<PackageVersion Include="Avalonia.Direct2D1" Version="$(Version_Avalonia)" />-->
 		<PackageVersion Include="Avalonia.Controls.DataGrid" Version="$(Version_Avalonia)" />
-        <PackageVersion Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5" />
+		<PackageVersion Include="Avalonia.Controls.ItemsRepeater" Version="11.1.5" />
 		<PackageVersion Include="Avalonia.Native" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Win32" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.X11" Version="$(Version_Avalonia)" />
@@ -806,11 +807,12 @@
 	<!-- Avalonia Xaml Behaviors -->
 	<ItemGroup>
 		<PackageVersion Include="Avalonia.Xaml.Behaviors" Version="$(Version_Avalonia_Xaml_Behaviors)" />
+		<PackageVersion Include="Xaml.Behaviors.Avalonia" Version="11.3.9.3" />
 	</ItemGroup>
 	<!-- Avalonia Edit -->
 	<ItemGroup>
 		<PackageVersion Include="Avalonia.AvaloniaEdit" Version="$(Version_Avalonia_Edit)" />
-        <PackageVersion Include="AvaloniaEdit.TextMate" Version="$(Version_AvaloniaEdit_TextMate)" />
+		<PackageVersion Include="AvaloniaEdit.TextMate" Version="$(Version_AvaloniaEdit_TextMate)" />
 	</ItemGroup>
 	<!-- Avalonia CefNet -->
 	<ItemGroup>
@@ -1079,14 +1081,14 @@
 	<ItemGroup>
 		<PackageVersion Include="Utf8StringInterpolation" Version="1.3.2" />
 	</ItemGroup>
-  <!-- BsDiff -->
-  <ItemGroup>
-      <PackageVersion Include="BsDiff" Version="1.1.0" />
-  </ItemGroup>
+	<!-- BsDiff -->
+	<ItemGroup>
+		<PackageVersion Include="BsDiff" Version="1.1.0" />
+	</ItemGroup>
 	<ItemGroup>
 		<PackageVersion Include="CryptSharpStandard" Version="1.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.269"/>
+		<PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.269" />
 	</ItemGroup>
 </Project>
