✨ 新增 Avalonia.Controls.ColorPicker 依赖
在 Directory.Packages.props 文件中添加了 Avalonia.Controls.ColorPicker 包（版本 11.3.11），以支持颜色选择器控件的相关功能。

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -803,6 +803,7 @@
 		<PackageVersion Include="Avalonia.Win32" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.X11" Version="$(Version_Avalonia)" />
 		<PackageVersion Include="Avalonia.Android" Version="$(Version_Avalonia)" />
+		<PackageVersion Include="Avalonia.Controls.ColorPicker" Version="11.3.11" />
 	</ItemGroup>
 	<!-- Avalonia Xaml Behaviors -->
 	<ItemGroup>
