--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1090,4 +1090,7 @@
 	<ItemGroup>
 		<PackageVersion Include="Microsoft.Windows.CsWin32" Version="0.3.269" />
 	</ItemGroup>
+	<ItemGroup>
+		<PackageVersion Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
+	</ItemGroup>
 </Project>
